# sales-inv

./: Cargo.toml  README.md
migrations/: 20251114171559_products.down.sql  20251114171559_products.up.sql  20251117131358_users.down.sql  20251117131358_users.up.sql  20251117132449_products.down.sql  20251117132449_products.up.sql  20251117150301_users.up.sql  20251120180657_charts.down.sql  20251120180657_charts.up.sql
src/: config.rs  main.rs  shared_var.rs
src/mauth/: handlers.rs  layers.rs  middlewares.rs  mod.rs  routes.rs  schemas.rs
src/mcart/: handlers.rs  mod.rs  models.rs  routes.rs  schemas.rs  sql_string.rs
src/mproduct/: api.rs  handlers.rs  mod.rs  models.rs  routes.rs  schema.rs  tests.rs
src/musers/: handlers.rs  models.rs  routes.rs  schema.rs
src/product/: models.rs
src/util/: errors.rs  helpers.rs  mod.rs  passsword.rs  token.rs
