[package]
name = "sales-inv"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros", "ws", "multipart", "http2"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std-native-tls", "chrono", "uuid", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
